<resources>
    <string name="app_name">Thessaloniki Tour Guide</string>
    <string name="street_address">Street Address</string>
    <string name="location_web_address">Location Web Address</string>
    <string name="location_phone_number">Location Phone Number</string>
    <string name="thessaloniki_city_center_tour">Thessaloniki City Center Tour</string>
    <string name="view_locations_list">Locations List</string>
    <string name="view_locations_on_map">Locations On Map</string>
    <string name="thessaloniki_museums_tour">Thessaloniki Museums Tour</string>
    <string name="view_museums_list">Museums List</string>
    <string name="view_museums_on_map">Museums on Map</string>
    <string name="thessaloniki_theatres_and_cinemas">Thessaloniki Theatres and Cinemas</string>
    <string name="view_theatres_and_cinemas_list">Theatres and Cinemas List</string>
    <string name="view_theatres_and_cinemas_on_map">Theatres and Cinemas on Map</string>
    <string name="thessaloniki_places_of_high_interest">Thessaloniki Places of High Interest</string>
    <string name="places_of_interest_list">Places of Interest List</string>
    <string name="places_of_interest_on_map">Places of Interest on Map</string>
    <string name="welcome_to_the_thessaloniki_city_tour_guide">Welcome to the Thessaloniki City Tour Guide</string>
    <string name="use_the_menu_to_navigate_between_hand_picked_locations_in_the_city_of_thessaloniki">Use the menu to navigate between hand-picked locations in the city of Thessaloniki!</string>
    <string name="location_name_white_tower">White Tower of Thessaloniki</string>
    <string name="location_address_white_tower">Thessaloniki, 546 21</string>
    <string name="location_webpage_white_tower">http://www.lpth.gr/</string>
    <string name="location_phone_white_tower">+30 231 026 7832</string>
    <string name="location_name_arch_of_galerius">Arch of Galerius</string>
    <string name="location_address_arch_of_galerius">Egnatia 144, Thessaloniki 546 22</string>
    <string name="location_webpage_arch_of_galerius">http://odysseus.culture.gr/h/2/gh251.jsp?obj_id=1425</string>
    <string name="location_phone_arch_of_galerius">+30 231 331 0400</string>
    <string name="location_name_rotonda">Rotonda Roman Temple</string>
    <string name="location_address_rotonda">Pl. Agiou Georgiou Rotonda 5, Thessaloniki 546 35</string>
    <string name="location_webpage_rotonda">http://odysseus.culture.gr/h/2/gh251.jsp?obj_id=1812</string>
    <string name="location_phone_rotonda">+30 231 096 8860</string>
    <string name="location_name_agia_sofia">Church of Aghia Sofia</string>
    <string name="location_address_agia_sofia">Agias Sofias, Thessaloniki 546 22</string>
    <string name="location_webpage_agia_sofia">https://thessaloniki.travel/en/exploring-the-city/religion/greek-orthodox-churches/item/1832-church-of-aghia-sophia</string>
    <string name="location_phone_agia_sofia">+30 231 027 0253</string>
    <string name="location_name_aristotelous">Aristotelous Square</string>
    <string name="location_address_aristotelous">Aristotelous, Thessaloniki 546 24</string>
    <string name="location_webpage_aristotelous">https://thessaloniki.travel/en/exploring-the-city/themed-routes/modern-architecture/item/1021-aristotelous-square</string>
    <string name="location_phone_aristotelous"></string>
    <string name="location_name_kapani">Kapani Market</string>
    <string name="location_address_kapani">Menexe 25, Thessaloniki 546 24</string>
    <string name="location_webpage_kapani">https://kapani.gr/</string>
    <string name="location_phone_kapani">+30 231 231 5386</string>
    <string name="location_name_modiano">Modiano Market</string>
    <string name="location_address_modiano">Thessaloniki 546 24</string>
    <string name="location_webpage_modiano">https://en.wikipedia.org/wiki/Modiano_Market</string>
    <string name="location_phone_modiano">+30 231 400 5162</string>
    <string name="location_name_roman_forum">Roman Forum Thessaloniki</string>
    <string name="location_address_roman_forum">Olympou 75, Thessaloniki 546 31</string>
    <string name="location_webpage_roman_forum">https://thessaloniki.travel/en/exploring-the-city/themed-routes/roman-route/item/958-the-roman-forum</string>
    <string name="location_phone_roman_forum">+30 231 022 1266</string>
    <string name="location_name_agios_dimitrios">Church of Aghios (ST) Demetrius</string>
    <string name="location_address_agios_dimitrios">Agiou Dimitriou 83, Thessaloniki 546 33</string>
    <string name="location_webpage_agios_dimitrios">https://thessaloniki.travel/en/exploring-the-city/religion/greek-orthodox-churches/item/1833-church-of-aghios-st-demetrius</string>
    <string name="location_phone_agios_dimitrios">+30 231 027 0591</string>
    <string name="location_name_alatza_imaret">Alatza Imaret</string>
    <string name="location_address_alatza_imaret">Kassandrou 91—93, Thessaloniki 546 33</string>
    <string name="location_webpage_alatza_imaret">https://en.wikipedia.org/wiki/Alaca_Imaret_Mosque</string>
    <string name="location_phone_alatza_imaret">+30 231 027 8587</string>
    <string name="location_name_archaeological_museum">Archaeological Museum of Thessaloniki</string>
    <string name="location_address_archaeological_museum">Manoli Andronikou 6, Thessaloniki 546 21</string>
    <string name="location_webpage_archaeological_museum">https://www.amth.gr/en</string>
    <string name="location_phone_archaeological_museum">+30 231 331 0201</string>
    <string name="location_name_byzantine_museum">Museum of Byzantine Culture</string>
    <string name="location_address_byzantine_museum">Leof. Stratou 2, Thessaloniki 546 21</string>
    <string name="location_webpage_byzantine_museum">http://www.mbp.gr/en</string>
    <string name="location_phone_byzantine_museum">+30 231 330 6400</string>
    <string name="location_name_war_museum">War Museum of Thessaloniki</string>
    <string name="location_address_war_museum">Gr. Lampraki 4, Thessaloniki 546 36</string>
    <string name="location_webpage_war_museum">https://www.warmuseumthessaloniki.com/</string>
    <string name="location_phone_war_museum">+30 231 024 9803</string>
    <string name="location_name_contemporary_art_museum">Macedonian Museum of Contemporary Art</string>
    <string name="location_address_contemporary_art_museum">Egnatia 154, inside Helexpo, Thessaloniki 546 36</string>
    <string name="location_webpage_contemporary_art_museum">https://en.wikipedia.org/wiki/Macedonian_Museum_of_Contemporary_Art</string>
    <string name="location_phone_contemporary_art_museum">+30 231 024 0002</string>
    <string name="location_name_radio_museum">Radio Museum</string>
    <string name="location_address_radio_museum">Inside Helexpo, Thessaloniki 546 21</string>
    <string name="location_webpage_radio_museum">http://radiomuseum.gr/</string>
    <string name="location_phone_radio_museum">+30 697 330 0103</string>
    <string name="location_name_macedonia_music_museum">Macedonia Music Museum</string>
    <string name="location_address_macedonia_music_museum">Svolou 10, Thessaloniki 546 22</string>
    <string name="location_webpage_macedonia_music_museum"></string>
    <string name="location_phone_macedonia_music_museum"></string>
    <string name="location_name_macedonia_struggle_museum">Macedonia Struggle Museum</string>
    <string name="location_address_macedonia_struggle_museum">Proksenou Koromila 23, Thessaloniki 546 22</string>
    <string name="location_webpage_macedonia_struggle_museum">http://www.imma.edu.gr/imma/index.html</string>
    <string name="location_phone_macedonia_struggle_museum">+30 231 022 9778</string>
    <string name="location_name_jewish_museum">Jewish Museum Of Thessaloniki</string>
    <string name="location_address_jewish_museum">Agiou Mina 13, Thessaloniki 546 24</string>
    <string name="location_webpage_jewish_museum">http://www.jmth.gr/</string>
    <string name="location_phone_jewish_museum">+30 231 025 0406</string>
    <string name="location_name_photography_museum">Thessaloniki Museum Of Photography</string>
    <string name="location_address_photography_museum">Warehouse A\', Port of Thessaloniki, Thessaloniki 540 15</string>
    <string name="location_webpage_photography_museum">http://www.thmphoto.gr/</string>
    <string name="location_phone_photography_museum">+30 231 056 6716</string>
    <string name="location_name_folklore_ethnological_museum">Folklore and Ethnological Museum of Macedonia - Thrace Museum</string>
    <string name="location_address_folklore_ethnological_museum">Filippou Nikoglou 1, Thessaloniki 546 42</string>
    <string name="location_webpage_folklore_ethnological_museum">http://www.lemmth.gr/</string>
    <string name="location_phone_folklore_ethnological_museum">+30 231 088 9840</string>
    <string name="location_name_ataturk_museum">Atatürk Museum</string>
    <string name="location_address_ataturk_museum">Apostolou Pavlou 17, Thessaloniki 546 34</string>
    <string name="location_webpage_ataturk_museum">https://en.wikipedia.org/wiki/Atat%C3%BCrk_Museum_(Thessaloniki)</string>
    <string name="location_phone_ataturk_museum">+30 231 024 8452</string>
    <string name="location_name_national_theatre">National Theatre of Northern Greece</string>
    <string name="location_address_national_theatre">Ethnikis Aminis 2, Thessaloniki 546 21</string>
    <string name="location_webpage_national_theatre">http://www.ntng.gr/</string>
    <string name="location_phone_national_theatre">+30 231 520 0200</string>
    <string name="location_name_royal_theatre">Royal Theatre | National Theatre of Northern Greece</string>
    <string name="location_address_royal_theatre">Leof. Meg. Aleksandrou, Thessaloniki 546 21</string>
    <string name="location_webpage_royal_theatre">http://www.ntng.gr/</string>
    <string name="location_phone_royal_theatre">+30 231 520 0200</string>
    <string name="location_name_macedonian_studies_theatre">Theatre Of The Society For Macedonian Studies | National Theatre of Northern Greece</string>
    <string name="location_address_macedonian_studies_theatre">Ethnikis Aminis 2, Thessaloniki 546 21</string>
    <string name="location_webpage_macedonian_studies_theatre">http://www.ems.gr/</string>
    <string name="location_phone_macedonian_studies_theatre">+30 231 027 1195</string>
    <string name="location_name_aristoteleion_theatre">Aristoteleion Theatre</string>
    <string name="location_address_aristoteleion_theatre">Ethnikis Aminis 2, Thessaloniki 546 21</string>
    <string name="location_webpage_aristoteleion_theatre">https://aristoteleion.gr/</string>
    <string name="location_phone_aristoteleion_theatre">+30 231 026 2051</string>
    <string name="location_name_moni_lazariston_theatre">Moni Lazariston | National Theatre of Northern Greece</string>
    <string name="location_address_moni_lazariston_theatre">Kolokotroni 25, Pavlos Melas 564 30</string>
    <string name="location_webpage_moni_lazariston_theatre">http://www.monilazariston.gr/</string>
    <string name="location_phone_moni_lazariston_theatre">+30 231 058 9185</string>
    <string name="location_name_municipal_garden_theatre">Dimotiko Theatro Kipou (Municipal Garden Theater)</string>
    <string name="location_address_municipal_garden_theatre">N.Germanou, YMCA Square, Thessaloniki 546 21</string>
    <string name="location_webpage_municipal_garden_theatre"></string>
    <string name="location_phone_municipal_garden_theatre">+30 231 025 6775</string>
    <string name="location_name_forest_theatre">Forest Theater (Kratiko Theatro Dasous) | National Theatre of Northern Greece</string>
    <string name="location_address_forest_theatre">Seich Sou Forest, Thessaloniki 554 38</string>
    <string name="location_webpage_forest_theatre"><![CDATA[https://www.ntng.gr/default.aspx?lang=en-GB&page=15]]></string>
    <string name="location_phone_forest_theatre">+30 231 520 0200</string>
</resources>