<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/thessaloniki_city_center_tour">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_center_tour_list_fragment"
                    android:icon="@drawable/outline_location_city_black_24"
                    android:title="@string/view_locations_list" />
                <item
                    android:id="@+id/nav_center_tour_map_fragment"
                    android:icon="@drawable/outline_place_black_24"
                    android:title="@string/view_locations_on_map" />
            </group>
        </menu>
    </item>
    <item android:title="@string/thessaloniki_museums_tour">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_museums_tour_list_fragment"
                    android:icon="@drawable/outline_location_city_black_24"
                    android:title="@string/view_museums_list" />
                <item
                    android:id="@+id/nav_museums_tour_map_fragment"
                    android:icon="@drawable/outline_place_black_24"
                    android:title="@string/view_museums_on_map" />
            </group>
        </menu>
    </item>
    <item android:title="@string/thessaloniki_theatres_and_cinemas">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_theatres_cinemas_list_fragment"
                    android:icon="@drawable/outline_location_city_black_24"
                    android:title="@string/view_theatres_and_cinemas_list" />
                <item
                    android:id="@+id/nav_theatres_cinemas_map_fragment"
                    android:icon="@drawable/outline_place_black_24"
                    android:title="@string/view_theatres_and_cinemas_on_map" />
            </group>
        </menu>
    </item>
    <item android:title="@string/thessaloniki_places_of_high_interest">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_places_of_interest_list_fragment"
                    android:icon="@drawable/outline_location_city_black_24"
                    android:title="@string/places_of_interest_list" />
                <item
                    android:id="@+id/nav_places_of_interest_map_fragment"
                    android:icon="@drawable/outline_place_black_24"
                    android:title="@string/places_of_interest_on_map" />
            </group>
        </menu>
    </item>
</menu>